src/index.css
/* ... */
h1 {
  font-size: clamp(2rem, 5vw, 3rem);
  justify-content: center;
  align-content: center;
  color: var(--heading-color);
  font-weight: bold;
}

h2 {
  display: flex;
  gap: 10px;

  color: var(--heading-color);
  margin-top: 20px;
  margin-bottom: 10px;

  font-size: clamp(1.5rem, 3.5vw, 2rem);
  font-weight: bold;

  vertical-align: center;
  align-items: center;

  position: relative;
}

.bullet-wrap {
  position: absolute;
  left: -1.1lh;   /* controls “outside” distance */
  display: flex;
  align-items: center;
}

.bullet {
  height: .75lh;
  width: auto;
}

h3 {
  font-size: clamp(1.2rem, 2.5vw, 1.5rem);
  color: var(--heading-color);
  font-weight: 650;

  margin-top: .5rem;
}

hr {
  display: none;
}

body {
  margin-top: 20px;
  margin: 0;
  background: var(--background-color);
  color: var(--primary-text-color);
  font-family: system-ui, sans-serif;
}

a {
  color: var(--link-color);
  text-decoration: none;

  cursor: pointer;
}

a:hover {
  color: var(--link-color-hover);
}

.quote,
.date {
  
  color: var(--secondary-text-color);
  font-style: regular;
}

.quote {
  text-align: center;
}

.build-heading {
  display: flex;
  flex-direction: row;

  align-items: baseline;
  gap: 2rem;
}

.date {
  margin-bottom: 0px;
}

.app {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

/*
======================
BUTTONS
======================
*/

.button {
  display: inline-block;
  padding: 0.75rem 1.5rem;
  background: var(--accent-color);
  width: fit-content;
  color: var(--primary-text-color);
  font-weight: bold;
  text-decoration: none;
  border-radius: 0.5rem;
  transition: all 0.2s ease;
  margin-bottom: 1rem;
}

.button:hover {
  color: var(--primary-text-color);
  box-shadow: 0 5px 15px var(--accent-shadow-color);
  transform: scale(1.05);
}

/* 
======================
HEADER
======================
*/

.header {
  display: flex;
  position: sticky;
  justify-content: space-between;
  align-items: center;
 
  flex-wrap: nowrap;
  gap: 1rem;
  padding: 1.5rem clamp(1rem, 4vw, 3rem);
  
  max-height: 150px;

  top: 0;
  background: var(--background-translucent);
  backdrop-filter: blur(8px);
  z-index:10000;
}

.mobile-title {
  display: none;
}

.header-home {
  background: transparent;
  backdrop-filter: none;
  position: absolute;
  width: 100%;
}

.header-home h1 {
  display: none;
}

.header-left {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  
}

.logo {
  position: static;
  top: 100;
  max-width: 100px;
  width: 100%;
  height: auto;
}

.header-right {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.tagline {
  font-size: 0.95rem;
  font-style: italic;
  color: var(--heading-color);
  opacity: 0.75;
  white-space: nowrap;
}

.date a {
  color: var(--heading-color);
  text-decoration: none;
  opacity: 0.85;
}


img{
  max-width: 100%;
  height: auto;
  display: block;
}

/* 
======================
NAVIGATION MENU
======================
*/

.navbar {
  position: relative;
}


.nav-item-link,
.dropdown-toggle {
  font-size: clamp(1.1rem, 2.5vw, 1.75rem);

  font-weight: 500;
}

.nav-item-link {
  display: flex;
  color: var(--primary-text-color);
  width: 100%;
  transition: all 0.2s ease;
  text-decoration: none;

  padding-top: 8px;
}

.dropdown-toggle {
  display: flex;
  margin-left: -5px;
  vertical-align: center;
  color: var(--primary-text-color);
  transition: all 0.2s ease;

  cursor: default;
}

/*
  ======================
  Nav Hover Effects
  ======================
*/

.nav-item-link:hover {
  background-color: transparent;
  color: var(--heading-color);
  transform: translateY(5px);
}

.dropdown-toggle:hover {
  color: var(--heading-color);
  transform: translateY(5px);
}

.navbar .dropdown:hover .dropdown-menu {
  display: block;
  margin-top: 0;
}

/* 
    ==================
    Hammer Icon
    ================== 
*/

.nav-item-link::after {
  content: "";
  display: inline-block;
  width: 30px;
  height: 30px;

  margin-top: 8px;
  margin-right: 10px;
  margin-left: 10px;

  background-image: url('./assets/icons/hammer.svg');
  background-size: contain;
  background-repeat: no-repeat;

  opacity: 0;
  transition: opacity 0.2s ease, transform 0.2s ease;
}

.nav-item-link:hover::after {
  opacity: 1;
}

.dropdown-toggle::after {
  content: "";
  display: inline-block;
  width: 30px;
  height: 30px;

  vertical-align: bottom;

  margin-top: 8px;

  background-image: url('./assets/icons/hammer.svg');
  background-size: contain;
  background-repeat: no-repeat;

  opacity: 0;
  transition: opacity 0.2s ease, transform 0.2s ease;
  border: none;
}

.dropdown-toggle.show::after {
  opacity: 1;
}

.dropdown-toggle.active {
  color: var(--heading-color);
}

.dropdown-toggle.show {
  color: var(--heading-color) !important;
  opacity: 1;
}

/* 
  ===================
  Dropdown Menus
  ===================  
*/

.nav-header {
  font-size: 1.25rem;
  text-align: end;
}

.dropdown-menu {
  display: block;
  background: var(--background-translucent);
  backdrop-filter: blur(8px);
 
  opacity: 0;
  transform: translateY(-10px) scale(0.98);
  transition: opacity 0.2s ease, transform 0.2s ease;
  
  pointer-events: none;

  border: 2px solid var(--transparent);

  right: 0;
  left: auto;
  max-width: 90vw;
}

.dropdown-menu:hover {
  border: 2px solid var(--heading-color);
}

.navbar .dropdown-menu {
  left: auto;
  right: 0;
}

.container {
  padding-right: 20px;
}

.dropdown-menu.show {
  opacity: 1;
  transform: translateY(0);
  pointer-events: auto;
  color: var(--heading-color);
}

/* 
    =================
    Dropdown Items
    =================
*/

.dropdown-item {
  color: var(--primary-text-color);
  text-align: right;
  font-size: 1.5rem;

  line-height: 1.25;
  margin-top: 5px;
  margin-bottom: 5px;

  width: 100%;
  transition: all 0.2s ease;

  white-space: normal;
}

.nav-dropdown-link {
  color: var(--primary-text-color);
}

.nav-dropdown-link:hover {
  color: var(--heading-color);
}
/* ... */

